RESOLVED FIXED58376
fix shadows with gradients
https://bugs.webkit.org/show_bug.cgi?id=58376
Summary fix shadows with gradients
Mike Reed
Reported 2011-04-12 14:25:55 PDT
fix shadows with gradients
Attachments
Patch (3.47 KB, patch)
2011-04-12 14:27 PDT, Mike Reed
no flags
Patch (3.38 KB, patch)
2011-04-12 14:28 PDT, Mike Reed
no flags
Patch (3.43 KB, patch)
2011-04-13 06:16 PDT, Mike Reed
no flags
Patch (3.29 KB, patch)
2011-04-13 12:08 PDT, Mike Reed
no flags
Patch (3.51 KB, patch)
2011-04-13 12:33 PDT, Mike Reed
no flags
Patch (3.51 KB, patch)
2011-04-14 06:16 PDT, Mike Reed
no flags
Patch (3.86 KB, patch)
2011-04-14 06:41 PDT, Mike Reed
no flags
Mike Reed
Comment 1 2011-04-12 14:27:31 PDT
Mike Reed
Comment 2 2011-04-12 14:28:51 PDT
Mike Reed
Comment 3 2011-04-12 14:30:36 PDT
requires DEPS roll of skia to rev. >= 1115
WebKit Review Bot
Comment 4 2011-04-12 15:00:43 PDT
Mike Reed
Comment 5 2011-04-13 06:16:26 PDT
Mike Reed
Comment 6 2011-04-13 06:17:38 PDT
Reuploaded patch now that the dependent Skia DEPS roll has landed.
WebKit Review Bot
Comment 7 2011-04-13 06:21:11 PDT
Mike Reed
Comment 8 2011-04-13 06:23:01 PDT
grrr, guess webkit hasn't pulled the latest chrome yet...
Andrei Popescu
Comment 9 2011-04-13 06:25:30 PDT
A couple of style issues: > Source/WebCore/platform/graphics/skia/GraphicsContextSkia.cpp:1075 > + (void)dl->addLayer(); // top layer, we just draw unchanged (void) ? Why is this needed? > Source/WebCore/platform/graphics/skia/GraphicsContextSkia.cpp:1087 > + mfFlags); I don't think this is the correct indent?
Mike Reed
Comment 10 2011-04-13 12:08:32 PDT
Mike Reed
Comment 11 2011-04-13 12:09:01 PDT
fixed indent
Andrei Popescu
Comment 12 2011-04-13 12:20:35 PDT
Comment on attachment 89428 [details] Patch LGTM View in context: https://bugs.webkit.org/attachment.cgi?id=89428&action=review > Source/WebCore/platform/graphics/skia/GraphicsContextSkia.cpp:1074 > + SkLayerDrawLooper* dl = new SkLayerDrawLooper; Can we please use a scoped pointer for this?
Mike Reed
Comment 13 2011-04-13 12:33:30 PDT
Andrei Popescu
Comment 14 2011-04-13 12:35:55 PDT
LGTM
WebKit Review Bot
Comment 15 2011-04-13 13:49:48 PDT
Mike Reed
Comment 16 2011-04-14 06:16:21 PDT
WebKit Review Bot
Comment 17 2011-04-14 06:21:23 PDT
Mike Reed
Comment 18 2011-04-14 06:41:19 PDT
Mike Reed
Comment 19 2011-04-14 06:56:07 PDT
had to roll Source/WebKit/chromium/DEPS as well to pick up the new skia api
WebKit Commit Bot
Comment 20 2011-04-14 20:18:53 PDT
Comment on attachment 89575 [details] Patch Clearing flags on attachment: 89575 Committed r83936: <http://trac.webkit.org/changeset/83936>
WebKit Commit Bot
Comment 21 2011-04-14 20:18:59 PDT
All reviewed patches have been landed. Closing bug.
Andrey Kosyakov
Comment 22 2011-04-15 08:57:08 PDT
Apparently, this breaks shared library build due to lack of SK_API declaration on several Skia classes this patch introduces: http://build.chromium.org/p/chromium/builders/Win%20Builder%20%28dbg%29%28shared%29/builds/5584/steps/compile/logs/stdio_html webkit errors: 1: webcore_platform.lib(GraphicsContextSkia.obj) : error LNK2019: unresolved external symbol "public: class SkPaint * __thiscall SkLayerDrawLooper::addLayer(struct SkLayerDrawLooper::LayerInfo const &)" (?addLayer@SkLayerDrawLooper@@QAEPAVSkPaint@@ABULayerInfo@1@@Z) referenced in function "private: void __thiscall WebCore::GraphicsContext::setPlatformShadow(class WebCore::FloatSize const &,float,class WebCore::Color const &,enum WebCore::ColorSpace)" (?setPlatformShadow@GraphicsContext@WebCore@@AAEXABVFloatSize@2@MABVColor@2@W4ColorSpace@2@@Z) 2: webcore_platform.lib(GraphicsContextSkia.obj) : error LNK2019: unresolved external symbol "public: static class SkColorFilter * __cdecl SkColorFilter::CreateModeFilter(unsigned int,enum SkXfermode::Mode)" (?CreateModeFilter@SkColorFilter@@SAPAV1@IW4Mode@SkXfermode@@@Z) referenced in function "private: void __thiscall WebCore::GraphicsContext::setPlatformShadow(class WebCore::FloatSize const &,float,class WebCore::Color const &,enum WebCore::ColorSpace)" (?setPlatformShadow@GraphicsContext@WebCore@@AAEXABVFloatSize@2@MABVColor@2@W4ColorSpace@2@@Z) 3: webcore_platform.lib(GraphicsContextSkia.obj) : error LNK2019: unresolved external symbol "public: static class SkMaskFilter * __cdecl SkBlurMaskFilter::Create(float,enum SkBlurMaskFilter::BlurStyle,unsigned int)" (?Create@SkBlurMaskFilter@@SAPAVSkMaskFilter@@MW4BlurStyle@1@I@Z) referenced in function "private: void __thiscall WebCore::GraphicsContext::setPlatformShadow(class WebCore::FloatSize const &,float,class WebCore::Color const &,enum WebCore::ColorSpace)" (?setPlatformShadow@GraphicsContext@WebCore@@AAEXABVFloatSize@2@MABVColor@2@W4ColorSpace@2@@Z) 4: webcore_platform.lib(GraphicsContextSkia.obj) : error LNK2019: unresolved external symbol "public: __thiscall SkLayerDrawLooper::LayerInfo::LayerInfo(void)" (??0LayerInfo@SkLayerDrawLooper@@QAE@XZ) referenced in function "private: void __thiscall WebCore::GraphicsContext::setPlatformShadow(class WebCore::FloatSize const &,float,class WebCore::Color const &,enum WebCore::ColorSpace)" (?setPlatformShadow@GraphicsContext@WebCore@@AAEXABVFloatSize@2@MABVColor@2@W4ColorSpace@2@@Z) 5: webcore_platform.lib(GraphicsContextSkia.obj) : error LNK2019: unresolved external symbol "public: __thiscall SkLayerDrawLooper::SkLayerDrawLooper(void)" (??0SkLayerDrawLooper@@QAE@XZ) referenced in function "private: void __thiscall WebCore::GraphicsContext::setPlatformShadow(class WebCore::FloatSize const &,float,class WebCore::Color const &,enum WebCore::ColorSpace)" (?setPlatformShadow@GraphicsContext@WebCore@@AAEXABVFloatSize@2@MABVColor@2@W4ColorSpace@2@@Z) 6: webcore_platform.lib(GraphicsContextSkia.obj) : error LNK2019: unresolved external symbol "public: class SkPaint * __thiscall SkLayerDrawLooper::addLayer(float,float)" (?addLayer@SkLayerDrawLooper@@QAEPAVSkPaint@@MM@Z) referenced in function "public: class SkPaint * __thiscall SkLayerDrawLooper::addLayer(void)" (?addLayer@SkLayerDrawLooper@@QAEPAVSkPaint@@XZ) 7: C:\b\build\slave\Win_Builder__dbg__shared_\build\src\build\Debug\webkit.dll : fatal error LNK1120: 6 unresolved externals
Mike Reed
Comment 23 2011-04-15 08:59:40 PDT
bsalomon is working on a fix as we speak (to chromium)
Note You need to log in before you can comment on or make changes to this bug.