2011-04-14  Mike Reed  <reed@google.com>

Reviewed by Kenneth Russell.

        fix shadows with gradients
        https://bugs.webkit.org/show_bug.cgi?id=58376

        No new tests. Existing tests exercise this
        LayoutTests/fast/canvas/canvas-fillPath-gradient-shadow.html

        * platform/graphics/skia/GraphicsContextSkia.cpp:
        (WebCore::GraphicsContext::setPlatformShadow):

git-svn-id: svn://svn.chromium.org/blink/trunk@83936 bbb929c8-8fbe-4397-9dbb-9b2b20218538